<?xml version="1.0" encoding="utf-8"?><!-- Represents a received message in the message list -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <!-- The profile image. Since players don't have profile image, a default image is used -->
    <ImageView
        android:id="@+id/image_message_profile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/common_full_open_on_phone"
        android:contentDescription="@string/message_received_image_message_profile_content_description_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- The name of the user -->
    <TextView
        android:id="@+id/text_message_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/message_received_text_message_name_text"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- The message contents -->
    <TextView
        android:id="@+id/text_message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_rectangle_orange"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:text="@string/message_received_text_message_body_text"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name" />

    <!-- The time the message was sent -->
    <TextView
        android:id="@+id/text_message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/message_received_text_message_time_text"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
        app:layout_constraintLeft_toRightOf="@+id/text_message_body"
        tools:ignore="SmallSp" />

</android.support.constraint.ConstraintLayout>