<?xml version="1.0" encoding="utf-8"?><!-- Represents the message list -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The message list -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/chat_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.RecyclerView>

    <!-- A horizontal line between the chatbox and RecyclerView -->
    <View
        android:id="@+id/chat_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="0dp"
        android:background="#dfdfdf"
        app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- For horizontal stacking -->
    <LinearLayout
        android:id="@+id/layout_chatbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- The enter message section -->
        <EditText
            android:id="@+id/edittext_chatbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/messaging_fragment_input_hint_text"
            android:inputType=""
            android:maxLines="6"
            android:textColor="@color/colorPrimaryDark" />

        <!-- The trading button -->
        <Button
            android:id="@+id/button_chatbox_trade"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/messaging_fragment_trade_button_text"
            android:textSize="14sp" />

        <!-- The send message button -->
        <Button
            android:id="@+id/button_chatbox_send"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/messaging_fragment_send_button_text"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>